# exercises

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ccpp.yml  dockerbuild.yml
bench/sort/: CMakeLists.txt  sort_bench.cpp
cmake/: compileOptions.cmake
docker/: Dockerfile  instructions.md
lib/: CMakeLists.txt
src/: CMakeLists.txt
src/graph/: CMakeLists.txt  graph.cpp  graph.hpp
src/sort/: CMakeLists.txt  main.cpp  sort.cpp  sort.hpp
src/textsearch/: CMakeLists.txt  textsearch.hpp  trie.hpp
test/: CMakeLists.txt
test/graph/: CMakeLists.txt  graph_test.cpp
test/sort/: CMakeLists.txt  sort_test.cpp
test/textsearch/: CMakeLists.txt  trie_test.cpp
